# opengl_template

./: CMakeLists.txt  README.md  makefile
src/helloTriangle/: main.cpp
